tests/errors/test_61.x
// Imported file does not exist

import "haha/what.x" as What;

import math;


fn main() -> void { return; }